--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,5 +15,7 @@
 
     <string name="menu_blog">Blog</string>
     <string name="menu_market">Market</string>
+    <string name="menu_mymarket">My Market</string>
+
 
 </resources>
