commit UI consult and API and fix some layout bug and API bug

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,8 @@
     <string name="menu_blog">Blog</string>
     <string name="menu_market">Market</string>
     <string name="menu_mymarket">My Market</string>
+    <string name="menu_myconsult">My Consult</string>
+
 
 
 </resources>
